[package]
name = "libsimpleservo"
version = "0.1.0"
authors = ["Paul Rouget <me@paulrouget.com>"]
build = "build.rs"

[lib]
name = "simpleservo"
crate-type = ["cdylib"]

[dependencies]
libservo = { git = "https://github.com/servo/servo", rev = "3f07cfec7c" }
libc = "0.2.23"
log = "0.3.8"

[build-dependencies]
gl_generator = "0.5.0"
moz-cheddar = "0.4.0"
