[package]
name = "servobridge"
version = "0.1.0"
authors = ["Paul Rouget <me@paulrouget.com>"]
build = "build.rs"

[lib]
name = "servobridge"
crate-type = ["cdylib"]

[dependencies]
libservo = { git = "https://github.com/servo/servo", rev = "4a132437df" }
libc = "0.2.23"
log = "0.3.8"

[build-dependencies]
gl_generator = "0.5.0"
moz-cheddar = "0.4.0"

[replace]
# "openssl:0.9.12" = { path = "../../rust-openssl/openssl/" }
# "https://github.com/servo/webrender#0.52.0" = { path = '../../webrender/webrender/' }
# "https://github.com/servo/webrender#webrender_api:0.52.0" = { path = '../../webrender/webrender_api/' }
# "https://github.com/servo/servo#libservo:0.0.1" = { path = "../../servo/components/servo" }
